<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bankapalli.basicwidgets.BasicWidgets">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/lblTitleValue"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@color/colorLimeYellow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/blUserId"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/lblUserIdValue"
                android:gravity="center_vertical"
            />
            <EditText
                android:id="@+id/txtUserId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txtUserIdHint"
                android:textSize="15sp"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                android:id="@+id/lblPassword"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/lblPasswordValue"
                android:gravity="center_vertical"
                />
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txtPasswordHint"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnLoginValue"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:textSize="15sp"
                android:onClick="login"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
